--- a/genflow/apps/iam/templates/account/email/email_confirmation_message.html
+++ b/genflow/apps/iam/templates/account/email/email_confirmation_message.html
@@ -118,7 +118,7 @@
         <tr>
         <td align="center" valign="top" width="600">
         <![endif]-->
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 200px;">
           <tr>
             <td align="center" valign="bottom">
               <a href="{{ current_site_url }}" target="_blank" style="display: inline-block;">
@@ -127,7 +127,7 @@
                   alt="Logo"
                   border="0"
                   width="100%"
-                  style="display: block; width: 100%;"
+                  style="display: block; width: 100%; margin-top: 20px; margin-bottom: 20px"
                 >
               </a>
             </td>
